Changes to accomidate VendorWise and vendor admin pages.

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="{% static 'images/apple-touch-icon-144x144-precomposed.png' %}">
 
     <!-- BASE CSS -->
-    <link href="{% static 'styles/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'styles/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'styles/style.css' %}" rel="stylesheet">
 
     <!-- SPECIFIC CSS -->
@@ -40,7 +40,7 @@
 	<div id="login">
 		<aside>
 			<figure>
-				<a href="{% url 'home' %}"><img src="{% static 'images/buildngz-logo-1.png' %}" width="155" height="40" alt="" class="logo_sticky"></a>
+				<a href="{% url 'home' %}"><img src="{% static 'images/vendorwise-1.png' %}" height="40" alt="" class="logo_sticky"></a>
 			</figure>
 			<form action="{% url 'login' %}" method="post" class="js-validation-signin px-30">
 				{% csrf_token %}
@@ -73,11 +73,16 @@
 		</aside>
 	</div>
 	<!-- /login -->
+	
+	<!-- LOAD MESSAGES -->
+	{% include 'includes/alerts.html' %}
+	<!-- END Error Messages -->
 		
 	<!-- COMMON SCRIPTS -->
-   	<script src="js/common_scripts.min.js"></script>
-    <script src="js/common_func.js"></script>
-    <script src="assets/validate.js"></script>
-</div>  
+   	<script src="{% static 'scripts/common_scripts.min.js' %}"></script>
+    <script src="{% static 'scripts/common_func.js' %}"></script>
+    <script src="{% static 'scripts/validate.js' %}"></script>
+</div> 
+
 </body>
 </html>
