--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <title>Buildngz - Find CRE Professionals and Book a Consultation by Appointment, Chat or Video call</title>
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
     <link rel="apple-touch-icon" type="image/x-icon" href="{% static 'images/apple-touch-icon-57x57-precomposed.png' %}">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="{% static 'images/apple-touch-icon-72x72-precomposed.png' %}">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="{% static 'images/apple-touch-icon-114x114-precomposed.png' %}">
