--- a/templates/includes/v_header.html
+++ b/templates/includes/v_header.html
@@ -10,7 +10,7 @@
                         <img src="{% static 'images/buildngz-sm-logo.png' %}" alt="" height="22">
                     </span> -->
                     <span class="logo-lg">
-                        <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="40">
+                        <img src="{% static 'images/vendorwise-1.png' %}" alt="" height="30">
                     </span>
                 </a>
 
