--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -18,8 +18,36 @@
 
                 <li>
                     <a href="{% url 'vendorInbox' %}" class="waves-effect">
-                        <i class="mdi mdi-email-variant"></i>
-                        <span>Email</span>
+                        <i class="mdi mdi-email-multiple-outline"></i>
+                        <span>Messages</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'v_bookings' %}" class=" waves-effect">
+                        <i class="mdi mdi-calendar-multiple-check"></i>
+                        <span>Bookings</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'v_rfps' %}" class=" waves-effect">
+                        <i class="mdi mdi-file-document-box-search-outline"></i>
+                        <span>RFPs</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'v_reviews' %}" class=" waves-effect">
+                        <i class="mdi mdi-thumb-up"></i>
+                        <span>Reviews</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'v_bookmarks' %}" class=" waves-effect">
+                        <i class="mdi mdi-bookmark"></i>
+                        <span>Bookmarks</span>
                     </a>
                 </li>
 
