--- a/templates/v_base_top.html
+++ b/templates/v_base_top.html
@@ -44,7 +44,7 @@
         - Under #MENU, add this: include 'includes/v_topnavbar.html'
     --->    
 
-    <body data-topbar="light" data-layout="horizontal">
+    <body data-topbar="light">
         <!-- Begin page -->
         <div id="layout-wrapper">
     
@@ -54,7 +54,7 @@
             <!-- ========== Menu Navigate Start ========== -->
 
             <!--- #MENU -->
-            {% include 'includes/v_topnavbar.html' %}
+            {% include 'includes/v_sidebar.html' %}
             <!-- MENU -->
 
         <!-- Menu Navigate End -->
