--- a/templates/v_emailBase.html
+++ b/templates/v_emailBase.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                    <h4 class="mb-0 font-size-18">Inbox</h4>
+                    <h4 class="mb-0 font-size-24">Messages</h4>
                 </div>
             </div>
         </div>
